syntax = "proto3";

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
  optional string name = 51234;
}

enum ErrorsEnum{
  MALFORMED_MESSAGE     = 0 [(name) = "E0000"];
  NOT_RECOGNIZED        = 1 [(name) = "E0001"];
  FOLDER_ALREADY_EXISTS = 2 [(name) = "E0002"];
  FAILED_DOWNLOAD       = 3 [(name) = "E0003"];
  FAILED_LISTING_FILES  = 4 [(name) = "E0004"];
  FAILED_DELETE_FILE    = 5 [(name) = "E0005"];
  FAILED_DELETE_SESSION = 6 [(name) = "E0006"];
}