syntax = "proto3";

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
  optional string name = 51234;
}

enum SuccessEnum{
  VIDEO_DOWNLOADABLE = 0 [(name) = "S0001"];
  LISTED_FILES       = 1 [(name) = "S0002"];
  READY_TO_SEND      = 2 [(name) = "S0002"];
  DELETE_FILE        = 3 [(name) = "S0003"];
  SESSION_DELETE     = 4 [(name) = "S0003"];
}